deleted:    .mvn/wrapper/maven-wrapper.jar 	deleted:    .mvn/wrapper/maven-wrapper.properties 	modified:   mvnw 	modified:   pom.xml 	modified:   src/main/java/com/ics/springnuxt/ICS_Zoo.java 	modified:   src/main/java/com/ics/springnuxt/controller/CarController.java 	new file:   src/main/java/com/ics/springnuxt/controller/UsedController.java 	modified:   src/main/java/com/ics/springnuxt/controller/UserController.java 	modified:   src/main/java/com/ics/springnuxt/dto/CreateCarDto.java 	deleted:    src/main/java/com/ics/springnuxt/dto/ErrorDao.java 	modified:   src/main/java/com/ics/springnuxt/dto/ShowroomDto.java 	modified:   src/main/java/com/ics/springnuxt/dto/UpdateCarDto.java 	new file:   src/main/java/com/ics/springnuxt/dto/UsedCarDto.java 	modified:   src/main/java/com/ics/springnuxt/dto/UserDto.java 	modified:   src/main/java/com/ics/springnuxt/entity/Car.java 	new file:   src/main/java/com/ics/springnuxt/entity/UsedCar.java 	modified:   src/main/java/com/ics/springnuxt/entity/User.java 	new file:   src/main/java/com/ics/springnuxt/mapper/DTOToObjectMapper.java 	modified:   src/main/java/com/ics/springnuxt/repository/CarRepository.java 	new file:   src/main/java/com/ics/springnuxt/repository/UsedCarRepository.java 	modified:   src/main/java/com/ics/springnuxt/repository/UserRepository.java 	modified:   src/main/java/com/ics/springnuxt/service/CarService.java 	new file:   src/main/java/com/ics/springnuxt/service/UsedCarService.java 	modified:   src/main/java/com/ics/springnuxt/service/UserService.java 	modified:   src/main/resources/application.properties 	deleted:    src/test/java/com/example/fullstackbooktodospringboot/FullstackbookTodoSpringbootApplicationTests.java 	deleted:    src/test/java/com/example/fullstackbooktodospringboot/controller/AppControllerTest.java 	deleted:    src/test/java/com/example/fullstackbooktodospringboot/controller/ToDoControllerTest.java 	deleted:    src/test/java/com/example/fullstackbooktodospringboot/service/ToDoServiceTest.ja