@@ -2,6 +2,7 @@ package com.ics.springnuxt.service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -10,13 +11,12 @@ import org.springframework.web.server.ResponseStatusException;
 import com.ics.springnuxt.dto.CreateUserDto;
 import com.ics.springnuxt.dto.UpdateUserDto;
 import com.ics.springnuxt.dto.UserDto;
-import com.ics.springnuxt.model.User;
-import com.ics.springnuxt.model.Zoo;
+import com.ics.springnuxt.entity.User;
 import com.ics.springnuxt.repository.UserRepository;
 
 @Service
 public class UserService {
-	private UserRepository userRepository;
+	private final UserRepository userRepository;
 
 	public UserService(UserRepository userRepository) {
 		this.userRepository = userRepository;
@@ -27,58 +27,45 @@ public class UserService {
 		user.setUsername(createUserDTO.getUsername());
 		user.setEmail(createUserDTO.getEmail());
 		user.setPassword(createUserDTO.getPassword());
-		 User users = userRepository.save(user);
-		return new UserDto(users);
+		User savedUser = userRepository.save(user);
+		return new UserDto(savedUser);
 	}
 
 	public List<UserDto> getUsers() {
 		List<User> users = userRepository.findAll();
-		return users.stream().map(entity -> new UserDto(entity)).toList();
+		return users.stream().map(UserDto::new).collect(Collectors.toList());
 	}
 
 	public List<UserDto> getUsernames(String name) {
 		Optional<User> users = userRepository.findByUsername(name);
-		return users.stream().map(entity -> new UserDto(entity)).toList();
+		return users.stream().map(UserDto::new).collect(Collectors.toList());
 	}
 
 	public UserDto getUsersById(Integer id) {
-		Optional<User> zoo = userRepository.findById(id);
-		if (zoo.isPresent()) {
-			return new UserDto(zoo.get());
-		} else {
-			throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Animal ID not found");
-		}
+		User user = userRepository.findById(id)
+			.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User ID " + id + " not found"));
+		return new UserDto(user);
 	}
 
-	public UserDto updateUsers(String id, UpdateUserDto updateUserDto) {
-		Optional<User> user = userRepository.findByUsername(id);
-		if (user.isPresent()) {
-            user.get().setUsername(updateUserDto.getUsername());
-            user.get().setEmail(updateUserDto.getEmail());
-            user.get().setPassword(updateUserDto.getPassword());
-
-			userRepository.save(user.get());
-			return new UserDto(user.get());
-		} else {
-			throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Animal update not succeeded");
-		}
+	public UserDto updateUsers(String username, UpdateUserDto updateUserDto) {
+		User user = userRepository.findByUsername(username)
+			.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User update not succeeded"));
+		user.setUsername(updateUserDto.getUsername());
+		user.setEmail(updateUserDto.getEmail());
+		user.setPassword(updateUserDto.getPassword());
+		User updatedUser = userRepository.save(user);
+		return new UserDto(updatedUser);
 	}
 
 	public void deleteUsers(String username) {
-		Optional<User> user = userRepository.findByUsername(username);
-		if (user.isPresent()) {
-			userRepository.delete(user.get());
-		} else {
-			throw new RuntimeException("No Animal Deleted");
-		}
+		User user = userRepository.findByUsername(username)
+			.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User " + username + " not found"));
+		userRepository.delete(user);
 	}
 
 	public UserDto getUserByUsername(String username) {
-		Optional<User> user = userRepository.findByUsername(username);
-		if (user.isPresent()) {
-			return new UserDto(user.get());
-		} else {
-			throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Animal by name" + username + "not found");
-		}
+		User user = userRepository.findByUsername(username)
+			.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User by name " + username + " not found"));
+		return new UserDto(user);
 	}
 }
